# veil-vault

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Arcium.toml  Cargo.toml  HLD.md  LLD.md  README.md  package-lock.json  package.json
artifacts/: circuits_hash.txt
encrypted-ixs/src/: lib.rs
libs/veilvault-tests/: Cargo.toml
libs/veilvault-tests/tests/integration/: mod.rs  pyth.rs  setup.rs  test_borrow_repay.rs  test_collateral.rs  test_deposit_withdraw.rs  test_governance.rs  test_liquidation.rs  test_market_reserve.rs
programs/veilvault/: Cargo.toml
programs/veilvault/src/: constants.rs  error.rs  lib.rs
programs/veilvault/src/instructions/: add_reserve.rs  borrow.rs  deposit.rs  deposit_collateral.rs  init_obligation.rs  init_private_obligation.rs  initialize_market.rs  liquidate.rs  mod.rs  private_borrow.rs  private_deposit_collateral.rs  private_liquidate.rs  refresh_obligation.rs  refresh_reserve.rs  repay.rs  set_pause.rs  update_market_authority.rs  update_reserve_config.rs  withdraw.rs  withdraw_collateral.rs
programs/veilvault/src/state/: lending_market.rs  mod.rs  obligation.rs  private_obligation.rs  reserve.rs
programs/veilvault/src/utils/: last_update.rs  mod.rs  prices.rs
scripts/: arcium.json  init_comp_def.ts  test-private-layer.ts
tests/: veilvault.ts
tools/circuit-builder/: Cargo.toml
tools/circuit-builder/src/: main.rs
