[workspace]
members = [
    "programs/*",
    "libs/*",
]
# encrypted-ixs and tools/circuit-builder are native-only crates (Arcis circuit
# source + offline compiler). They pull in quinn/ring which cannot compile for
# the BPF target, so they are excluded from this workspace. Build them separately:
#   cargo build --manifest-path encrypted-ixs/Cargo.toml
#   cargo build --manifest-path tools/circuit-builder/Cargo.toml
exclude = ["encrypted-ixs", "tools/circuit-builder"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
