[package]
name = "veilvault-tests"
version = "0.1.0"
edition = "2021"

# Integration test binary — loaded via LiteSVM (no localnet needed).
# Before running: cargo build-sbf (from veilvault/) to produce target/deploy/veilvault.so
[[test]]
name = "integration"
path = "tests/run.rs"

[dev-dependencies]
litesvm = "0.7"
solana-sdk = "~2.3"
spl-token = { version = "7", features = ["no-entrypoint"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
solana-program = "~2.3"