[package]
name = "veilvault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "veilvault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
pyth-solana-receiver-sdk = "0.3.1"

# Arcium MPC integration
arcium-anchor = "0.9.7"
arcium-client = { default-features = false, version = "=0.9.7" }
arcium-macros = "0.9.7"
# pin so that we do not have 1.13.*
unicode-segmentation = { version = "=1.12.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
